--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -787,64 +787,76 @@ function solicitarCantidadYAgregar(prod) {
   });
 }
 /* ===========================================================
-   🔎 RESTAURAR BÚSQUEDA POR CÓDIGO, PALABRA Y ESCÁNER
+   🔎 BÚSQUEDA POR CÓDIGO, PALABRA Y ESCÁNER (MEJORADA)
    =========================================================== */
 const buscador = document.getElementById("buscador");
 const resultadosDiv = document.getElementById("resultados");
 
+// 🎵 Beep reutilizable
+function beep(freq = 800, duration = 0.1) {
+  try {
+    const ctx = new (window.AudioContext || window.webkitAudioContext)();
+    const osc = ctx.createOscillator();
+    const gain = ctx.createGain();
+    osc.connect(gain); gain.connect(ctx.destination);
+    osc.type = "sine"; osc.frequency.value = freq;
+    gain.gain.setValueAtTime(0.15, ctx.currentTime);
+    osc.start(); osc.stop(ctx.currentTime + duration);
+  } catch (err) {}
+}
+
+// 🔍 Función central que ejecuta la búsqueda y muestra resultados
+function ejecutarBusqueda(texto) {
+  const resultados = buscarLocal(texto);
+  resultadosDiv.innerHTML = "";
+
+  if (resultados.length === 1) {
+    beep(950);
+    seleccionarProducto(resultados[0]);
+    resultadosDiv.style.display = "none";
+  } else if (resultados.length > 1) {
+    resultados.forEach(p => {
+      const item = document.createElement("div");
+      item.className = "result-item";
+
+      // Resalta coincidencias (p. ej. CONVERMEX → <strong>CONVERMEX</strong>)
+      const regex = new RegExp(texto, "ig");
+      const nombreResaltado = p.nombre.replace(regex, m => `<strong style="color:#0c6cbd">${m}</strong>`);
+
+      item.innerHTML = `<span>${nombreResaltado}</span><small>${money(p.precioPublico)}</small>`;
+      item.addEventListener("click", () => {
+        beep(950);
+        seleccionarProducto(p);
+        resultadosDiv.style.display = "none";
+      });
+      resultadosDiv.appendChild(item);
+    });
+    resultadosDiv.style.display = "block";
+    beep(700);
+  } else {
+    resultadosDiv.innerHTML = "<div style='padding:10px;color:#999;'>Sin coincidencias</div>";
+    resultadosDiv.style.display = "block";
+    beep(500);
+  }
+}
+
+// 🚀 Búsqueda directa con Enter (escáner o código)
 buscador.addEventListener("keydown", e => {
   if (e.key === "Enter") {
     e.preventDefault();
     const texto = buscador.value.trim();
-    if (!texto) return;
-
-    const resultados = buscarLocal(texto);
-
-    // 🎵 Pequeño beep de feedback
-    const beep = (freq = 800) => {
-      try {
-        const ctx = new (window.AudioContext || window.webkitAudioContext)();
-        const osc = ctx.createOscillator();
-        const gain = ctx.createGain();
-        osc.connect(gain); gain.connect(ctx.destination);
-        osc.type = "sine"; osc.frequency.value = freq;
-        gain.gain.setValueAtTime(0.15, ctx.currentTime);
-        osc.start(); osc.stop(ctx.currentTime + 0.1);
-      } catch (err) {}
-    };
-
-    resultadosDiv.innerHTML = "";
-
-    if (resultados.length === 1) {
-      beep(950);
-      seleccionarProducto(resultados[0]);
-      resultadosDiv.style.display = "none";
-    } else if (resultados.length > 1) {
-      // Mostrar lista de coincidencias
-      resultados.forEach(p => {
-        const item = document.createElement("div");
-        item.className = "result-item";
-        item.innerHTML = `<span>${p.nombre}</span><small>${money(p.precioPublico)}</small>`;
-        item.addEventListener("click", () => {
-          beep(950);
-          seleccionarProducto(p);
-          resultadosDiv.style.display = "none";
-        });
-        resultadosDiv.appendChild(item);
-      });
-      resultadosDiv.style.display = "block";
-      beep(700);
-    } else {
-      resultadosDiv.innerHTML = "<div style='padding:10px;color:#999;'>Sin coincidencias</div>";
-      resultadosDiv.style.display = "block";
-      beep(500);
-    }
+    if (texto) ejecutarBusqueda(texto);
   }
 });
 
-// Ocultar sugerencias al escribir de nuevo
+// ✍️ Búsqueda en vivo por nombre (al escribir)
 buscador.addEventListener("input", () => {
-  resultadosDiv.style.display = "none";
+  const texto = buscador.value.trim();
+  if (texto.length >= 3) {  // desde 3 letras
+    ejecutarBusqueda(texto);
+  } else {
+    resultadosDiv.style.display = "none";
+  }
 });
 
 /* ===========================================================
